--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,13 @@
+black==24.2.0
+click==8.1.7
+colorama==0.4.6
+mypy-extensions==1.0.0
+packaging==23.2
+pathspec==0.12.1
 pep8==1.7.1
 pillow==10.2.0
+platformdirs==4.2.0
 pycryptodome==3.20.0
 PyPDF2==3.0.1
+ruff==0.2.2
 ttkbootstrap==1.10.1
